<resources>
    <string name="app_name">MyCuseme</string>
    <string name="login_main_text">관리자 모드 로그인</string>
    <string name="login_wrong_password">*비밀번호가 틀렸습니다.</string>
    <string name="login_btn_unlock">잠금해제</string>
    <string name="login_input_text">비밀번호를 입력하세요</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_card_edit">카드 편집</string>
    <string name="text_card_search">카드 검색</string>
    <string name="text_preview">홈 편집</string>
    <string name="text_manage_new_card">새로만들기</string>
    <string name="text_manage_download">내려받기</string>
    <string name="text_download">카드 내려받기</string>
    <string name="text_btn_download">내려받기</string>
    <string name="wrong_download_text">일치하는 일련번호가 없습니다.</string>
    <string name="input_serial_number">카드 일련번호를 입력하세요.</string>
    <string name="create_card">직접 만들기</string>
    <string name="add_card">추가</string>
    <string name="bring_picture_from_album">앨범에서 사진 가져오기</string>
    <string name="input_card_title">카드 제목을 입력해주세요.</string>
    <string name="input_card_content">카드 내용을 입력해주세요.</string>
    <string name="record_text">의사 카드 음성 녹음</string>
    <string name="save_record">저장되었습니다.</string>
    <string name="no_record">상단에 입력한 카드 내용이 기기음으로 재생됩니다.</string>
    <string name="hide">숨기기 </string>
    <string name="delete">삭제</string>
    <string name="cancel">취소</string>
    <string name="modify">수정</string>
    <string name="serial_number">일련번호 | CN23432j0f0</string>
    <string name="content_title">화장실</string>
    <string name="content_content">가까운 화장실의 위치를 알려주세요</string>
    <string name="record_title">음성듣기</string>
    <string name="record_title2">녹음한 음성을 확인할 수 있습니다.</string>
    <string name="change_phone_number">보호자 연락처 변경</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="current_password">기존 비밀번호</string>
    <string name="btn_change">변경하기</string>
    <string name="wrong_password">*기존 비밀번호가 아닙니다</string>
    <string name="new_password_confirm">새 비밀번호 확인</string>
    <string name="new_password">새 비밀번호</string>
    <string name="title_phoneNumber">보호자 연락처 변경</string>
    <string name="number_hint">보호자 연락처</string>
    <string name="hide_card">숨김카드</string>
    <string name="save">저장</string>
    <string name="defualt_content">안녕하세요 카드를 눌러서 소통해요</string>
    <string name="default_title">반가워요!</string>
    <string name="empty_manage_card">카드를 만들기 위해 \n하단의 +버튼을 누르세요</string>
    <string name="press_lock_button">카드를 만들기 위해\n 상단의 자물쇠 버튼을 눌러 주세요</string>
    <string name="no_hidden_card">숨겨진 카드가 없습니다</string>
</resources>
