<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="downloadViewModel"
            type="com.good.mycuseme.ui.card.DownloadViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        tools:context=".ui.card.DownloadActivity">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar_back"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_download_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/text_download"
            android:textColor="@color/greyish_brown"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <EditText
            android:id="@+id/edit_text_download_serial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="104dp"
            android:hint="@string/input_serial_number"
            android:maxLength="10"
            android:text="@={downloadViewModel.serialNumber}"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_download_text" />

        <TextView
            android:id="@+id/tv_download_wrong_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/wrong_download_text"
            android:textColor="@color/mainpink"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_download_serial" />

        <Button
            android:id="@+id/btn_download"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/btn_login_selector"
            android:clickable="@{downloadViewModel.isClickable}"
            android:padding="10dp"
            android:text="@string/text_btn_download"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_download_wrong_text" />

        <TextView
            android:id="@+id/tv_download_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/create_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_download" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>