<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="passwordViewModel"
            type="com.good.mycuseme.ui.setting.PasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        tools:context=".ui.login.LoginActivity">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar_back"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/change_password"
            android:textColor="@color/greyish_brown"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <EditText
            android:id="@+id/et_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="72dp"
            android:hint="@string/current_password"
            android:inputType="numberPassword"
            android:text="@={passwordViewModel.beforePassword}"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password_text" />

        <EditText
            android:id="@+id/et_new_password_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="12dp"
            android:hint="@string/new_password"
            android:inputType="numberPassword"
            android:text="@={passwordViewModel.newPassword}"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/et_current_password" />

        <EditText
            android:id="@+id/et_new_password_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="12dp"
            android:hint="@string/new_password_confirm"
            android:inputType="numberPassword"
            android:text="@={passwordViewModel.newPasswordConfirm}"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/et_new_password_first" />

        <TextView
            android:id="@+id/tv_password_wrong_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:text="@={passwordViewModel.wrongText}"
            android:textColor="@color/mainpink"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/et_new_password_second" />

        <Button
            android:id="@+id/btn_password"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_login_selector"
            android:clickable="@{passwordViewModel.isClickable}"
            android:padding="10dp"
            android:text="@string/btn_change"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password_wrong_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>