<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="phoneNumberViewModel"
            type="com.good.mycuseme.ui.setting.PhoneNumberViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        tools:context=".ui.login.LoginActivity">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar_back"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/title_phoneNumber"
            android:textColor="@color/greyish_brown"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="104dp"
            android:hint="@string/number_hint"
            android:inputType="phone"
            android:text="@={phoneNumberViewModel.phoneNumber}"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone_text" />


        <Button
            android:id="@+id/btn_phone"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/btn_login_selector"
            android:clickable="@{phoneNumberViewModel.isClickable}"
            android:padding="10dp"
            android:text="@string/btn_change"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phone_number" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>